qa/postgresql/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: br-common-qa-postgres
  namespace: br-common-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image:  default-route-openshift-image-registry.apps.brocp.openshift.br.com.br/br-common-qa/postgres:12
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
