qa/postgresql/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: br-common-qa
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: 5432-tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
